--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ button {
     async function loadLocations() {
   const response1 = await fetch("locations3.geojson");
   const data1 = await response1.json();
-  const response2 = await fetch("manuallocations.json");
+  const response2 = await fetch("manualLocations.json");
   const data2 = await response2.json();
 
   const features = data1.features.concat(data2.features);
